fix: z-index issue with prestashop header

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -27,7 +27,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 1000;
+  z-index: 99999;
 }
 
 .header {
